# dalet-lsp

./: .gitignore  Cargo.toml  README.md  package.json  pre-install.js  start.js  uninstall.js
src/: main.rs
